@@ -254,7 +254,7 @@ namespace libtorrent
 		SET(max_failcount, 3, &session_impl::update_max_failcount),
 		SET(min_reconnect_time, 60, 0),
 		SET(peer_connect_timeout, 15, 0),
-		SET(connection_speed, 10, &session_impl::update_connection_speed),
+		SET(connection_speed, 30, &session_impl::update_connection_speed),
 		SET(inactivity_timeout, 600, 0),
 		SET(unchoke_interval, 15, 0),
 		SET(optimistic_unchoke_interval, 30, 0),
@@ -334,7 +334,7 @@ namespace libtorrent
 		SET(utp_loss_multiplier, 50, 0),
 		SET(mixed_mode_algorithm, settings_pack::peer_proportional, 0),
 		SET(listen_queue_size, 5, 0),
-		SET(torrent_connect_boost, 10, 0),
+		SET(torrent_connect_boost, 80, 0),
 		SET(alert_queue_size, 1000, &session_impl::update_alert_queue_size),
 		SET(max_metadata_size, 3 * 1024 * 10240, 0),
 		DEPRECATED_SET(hashing_threads, 1, 0),
