@@ -290,12 +290,12 @@ namespace libtorrent
 		, m_save_resume_flags(0)
 		, m_num_uploads(0)
 		, m_need_suggest_pieces_refresh(false)
-		, m_need_connect_boost(true)
 		, m_lsd_seq(0)
 		, m_magnet_link(false)
 		, m_apply_ip_filter((p.flags & add_torrent_params::flag_apply_ip_filter) != 0)
 		, m_merge_resume_trackers((p.flags & add_torrent_params::flag_merge_resume_trackers) != 0)
 		, m_padding(0)
+		, m_connect_boost_counter(static_cast<boost::uint8_t>(settings().get_int(settings_pack::torrent_connect_boost)))
 		, m_incomplete(0xffffff)
 		, m_announce_to_dht((p.flags & add_torrent_params::flag_paused) == 0)
 		, m_is_active_download(false)
@@ -3758,23 +3758,24 @@ namespace {
 
 	void torrent::do_connect_boost()
 	{
-		if (!m_need_connect_boost) return;
+		if (m_connect_boost_counter == 0) return;
 
 		// this is the first tracker response for this torrent
 		// instead of waiting one second for session_impl::on_tick()
 		// to be called, connect to a few peers immediately
-		int conns = (std::min)(
-			settings().get_int(settings_pack::torrent_connect_boost)
+		int conns = (std::min)(int(m_connect_boost_counter)
 			, settings().get_int(settings_pack::connections_limit) - m_ses.num_connections());
 
-		if (conns > 0) m_need_connect_boost = false;
+		if (conns == 0) return;
 
 		// if we don't know of any peers
 		if (!m_peer_list) return;
 
 		while (want_peers() && conns > 0)
 		{
+			TORRENT_ASSERT(m_connect_boost_counter > 0);
 			--conns;
+			--m_connect_boost_counter;
 			torrent_state st = get_peer_list_state();
 			torrent_peer* p = m_peer_list->connect_one_peer(m_ses.session_time(), &st);
 			peers_erased(st.erased);
@@ -9950,7 +9951,8 @@ namespace {
 		}
 #endif
 
-		m_need_connect_boost = true;
+		m_connect_boost_counter
+			= static_cast<boost::uint8_t>(settings().get_int(settings_pack::torrent_connect_boost));
 		m_inactive = false;
 
 		update_state_list();
