@@ -1,3 +1,5 @@
+	* improve connect-boost feature, to make new torrents quickly connect peers
+
 1.1.9 release
 
 	* save both file and piece priorities in resume file
